16-05-2018

- Version 2.1.5

- FIX: In some cases a 30 second initial delay could happen cause client lost info about long poller

20-04-2018

- Version 2.1.4

- FIX: Subtle issue where poll timeout may not be cleared causing multiple concurrent polls
- FIX: Add extra protection for poller to ensure there is never a case where multiple ajax happens concurrently

09-01-2018

- Version 2.1.2

- FEATURE: minHiddenPollInterval set to 1500ms out of the box, ensures we never do hidden tab
   polls at a high rate if tons of tabs are open
- FEATURE: added random 500ms to delayed polls to increase tab entropy

18-12-2017

- Version 2.1.1

- FEATURE: allow setting of max_backlog_size and max_backlog_age on publish for redis provider

18-12-2017

- Version 2.1.0

- FEATURE: you can now lookup last N messages on channel on subscribe from JavaScript
   Subscribe at position (-1 - numberOfMessages) from the client

24-11-2017

- Version 2.0.9

- PERF: faster serialization of messages
- FEATURE: on backend flush web clients will resume and continue to get all new messages

06-10-2017

- Version 2.0.8

- Fix: Make redis readonly detection more robust

02-10-2017

- Version 2.0.7

- Fix/Feature: use LUA script for publishing to bus, this eliminates a race condition
   and ensures that we are never stuck in a multi transaction by mistake


29-09-2017

- Version 2.0.6

- Fix: correct after_fork so it correctly disconnnects redis
- Fix: correct message_bus #destroy used in tests to clean up spec (deadlock)
- Fix: deliver backlog unconditionally when polling (and not long polling)

16-08-2017

- Version 2.0.5

- Quick fix, build on earlier version of Ruby cause https://github.com/rubygems/rubygems/issues/1448 is still open

- Version 2.0.3
- Fix: broken MessageBus.redis_config
- Perf: publish status message for filtered messages
- Perf: add frozen strings to save on memory
- Feature: improved logging when messages are dropped
- Fix: handle missing actiondispatch flash

25-08-2016
